[gd_scene load_steps=6 format=3 uid="uid://bjkthqxfxtugj"]

[ext_resource type="Script" path="res://Characters/enemy_donut_shield.gd" id="1_738l5"]
[ext_resource type="Texture2D" uid="uid://h5c07lrnjou3" path="res://Art/enemy_donut.png" id="1_lim5c"]

[sub_resource type="Curve2D" id="Curve2D_iv8ra"]
_data = {
"points": PackedVector2Array(2.66968, 36.0407, -2.66968, -36.0407, 0, 0, -180.203, 0, 180.203, 0, 175, -175, 1.47132, -0.349598, -1.47132, 0.349598, 350, 0, 200.226, 1.33484, -200.226, -1.33484, 175, 175, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_4a7it"]
radius = 31.7805

[sub_resource type="Curve2D" id="Curve2D_5oyd1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, -208.974, 0.890899, 208.974, -0.890899, 179, -223, 0, 0, 0, 0, 417, 0, 288.651, 1.7818, -288.651, -1.7818, 156, 245, 0, 0, 0, 0, -107, -1, -318.333, 0, 318.333, 0, 181, -303, 0, 0, 0, 0, 500, -1, 330.552, 0, -330.552, 0, 175, 300, 0, 0, 0, 0, -150, 0, -388.438, 1.33484, 388.438, -1.33484, 175, -325, 0, 0, 0, 0, 500, 1, 338.04, -3.36359, -338.04, 3.36359, 175, 325, 0, 0, 0, 0, -150, 0, -393.54, 1.68179, 393.54, -1.68179, 175, -325, 0, 0, 0, 0, 500, 0)
}
point_count = 15

[node name="enemy_donut_shield" type="CharacterBody2D"]
script = ExtResource("1_738l5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_lim5c")

[node name="Circle1" type="Path2D" parent="."]
curve = SubResource("Curve2D_iv8ra")

[node name="Circle1Follow" type="PathFollow2D" parent="Circle1"]
rotation = -1.64474

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4a7it")

[node name="Circle2" type="Path2D" parent="."]
curve = SubResource("Curve2D_5oyd1")

[node name="Circle2Follow" type="PathFollow2D" parent="Circle2"]
rotation = -0.894417
